Fixed visual errors on mobile

--- a/css/style.css
+++ b/css/style.css
@@ -6,12 +6,12 @@ body {
 /* Header stylings */
 
 header {
-    height: calc(100vh - 50px);
+    height: calc(100vh - 15px);
     /* Currently not working properly live on webpage or Github pages, need to take a look at this! */
     background: linear-gradient(#222222e0, #222222e0),
     url("images/starry.jpg");
     /**/
-    padding-top: 50px;
+    padding-top: 15px;
     background-size: cover;
     background-repeat: no-repeat;
     text-align: center;
@@ -294,7 +294,7 @@ p, li, label, button  {
 
 /* Mobile */
 
-@media screen and (max-width: 412px) {
+@media screen and (max-width: 414px) {
     #data {
         display: grid;
         grid-template-columns: repeat(1, 1fr);
